--- a/plugin.xml
+++ b/plugin.xml
@@ -4,7 +4,7 @@
         version="0.1.0">
 
   <name>ScreenLock</name>
-
+  <author>Adam Barak</author>
   <engines>
     <engine name="cordova" version=">=3.4.0"/>
   </engines>
